--- a/Connectivity/UI_FORM_DATA_2/src/main/webapp/Form2.html
+++ b/Connectivity/UI_FORM_DATA_2/src/main/webapp/Form2.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<form action="serve">
+		Name:input  <input type="text" name="nm">
+	</form>
 </body>
 </html>
